<resources>
    <string name="app_name">Appit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_report">Report</string>
    <string name="menu_share">Share</string>
    <string name="aboutus">About Us</string>
    <string name="hello_blank_fragment1half">
        <big><b>What is Android?</b></big>\n
        <b>o</b>    Android is a complete set of software for mobile devices such as tablet computers, notebooks, smartphones, electronic book readers, set-top boxes etc.\n
        <b>o</b>    It contains a Linux-based Operating System, middleware and key mobile applications.\n
<b>o</b>    It can be thought of as a mobile operating system. But it is not limited to mobile only. It is currently used in various devices such as mobiles, tablets, televisions etc.\n
       \n\n
        <big><b>Features of Android </b></big>\n
        1) It is open-source.\n
2) Anyone can customize the Android Platform.\n
3) There are a lot of mobile applications that can be chosen by the consumer.\n
4) It provides many interesting features like weather details, opening screen, live RSS (Really Simple Syndication) feeds etc.\n
5) It provides support for messaging services(SMS and MMS), web browser, storage (SQLite), connectivity (GSM, CDMA, Blue Tooth, Wi-Fi etc.), media, handset layout etc.\n
\n\n

  <big><b>History of Android</b> </big>      \n
    <b>o</b>       The history and versions of android are interesting to know. The code names of android ranges from A to P currently, such as Aestro, Blender, Cupcake, Donut, Eclair, Froyo, Gingerbread, Honeycomb, Ice Cream Sandwitch, Jelly Bean, KitKat and Lollipop,Marshmallow,Noughat,Oreo,Pie. \n<b>o</b>   Let\'s understand the android history in a sequence.\n
        1) Initially, Andy Rubin founded Android Incorporation in Palo Alto, California, United States in October, 2003.\n
        2) In 17th August 2005, Google acquired android Incorporation. Since then, it is in the subsidiary of Google Incorporation.\n
        3) The key employees of Android Incorporation are Andy Rubin, Rich Miner, Chris White and Nick Sears.
\n4) Originally intended for camera but shifted to smart phones later because of low market for camera only.
\n5) Android is the nick name of Andy Rubin given by coworkers because of his love to robots.
\n6) In 2007, Google announces the development of android OS.
\n7) In 2008, HTC launched the first android mobile.
        \n
        \n
        \n
 <big><b>Android Architecture </b></big>
\n
        <b>o</b>   Android architecture or Android software stack is categorized into five parts:\n
        <ul><li>Linux kernel</li>\n
        <li>Native libraries (middleware)</li>\n
            <li>Android Runtime</li>\n
            <li>Application Framework</li>\n
<li>Applications</li>
        </ul>
 \n
        \n


    </string>
    <string name="hello_blank_fragment1full">
        <big><b>How to develop Android Apps?</b></big>
        \n
         Creating a simple Android App using Android Studio\n
        <ul><li>
        Create the new android project\n</li>
        <li>Write the message (optional)\n</li>
            <li>Run the android application\n</li></ul>
\n

    </string>
    <string name="hello_blank_fragment3half">
        <big><b>
            Android Widgets
        </b></big>\n

            <b>o</b>   There are various Android Widgets such as:\n
        <ul><li>Button</li>\n
            <li>EditText</li>\n
            <li>AutoComplete</li>\n
            <li>TextView</li>\n
            <li>ToggleButton</li>\n
            <li>DatePicker</li>\n
            <li>TimePicker</li>\n
            <li>ProgressBar</li>\n
        </ul>\n\n

        <big><b>Android Button</b></big>\n
        <b>o</b>   Android Button represents a push-button. The android.widget.Button is subclass of TextView class and CompoundButton is the subclass of Button class.\n
<b>o</b>   There are different types of buttons in android such as:\n
<ul><li>RadioButton</li>\n
        <li>ToggleButton</li>\n
    <li>CompoundButton</li></ul>
\n\n
        <big><b>Button Inheritance</b></big>\n

    </string>
    <string name="hello_blank_fragment3full">\n\n
        <big><b>Android Button Example with Listener</b></big>\n
        <ul><li>
            Here, we are going to create two textfields and one button for sum of two numbers. If user clicks button, sum of two input values is displayed on the Toast.\n</li>
<li>We can perform action on button using different types such as calling listener on button or adding onClick property of button in activity\'s XML file.\n
        </li></ul>\n\n

        <big><b>Android Toast</b></big>\n
        <b>o</b>   Android Toast can be used to display information for the short period of time. A toast contains message to be displayed quickly and disappears after sometime.\n
<b>o</b>   The android.widget.Toast class is the subclass of java.lang.Object class.\n
<b>o</b>   Constants of Toast class :-\n
<b>o</b>   There are only 2 constants of Toast class which are given below.\n

1. public static final int LENGTH_LONG :-\n displays view for the long duration of time.\n

2. public static final int LENGTH_SHORT :-\n displays view for the short duration of time.\n
\n\n
        <big><b>Android CheckBox</b></big>\n
        <ul><li>Android CheckBox is a type of two state button either checked or unchecked.</li>\n
            <li>There can be a lot of usage of checkboxes. For example, it can be used to know the hobby of the user, activate/deactivate the specific action etc.</li>\n
            <li>Android CheckBox class is the subclass of CompoundButton class.</li>\n
        </ul>
        \n\n
        <big><b>Check Box Inheritance</b></big>\n
    </string>
    <string name="hello_blank_fragment3last">
        \n\n
        <big><b>Android CheckBox Class</b></big>\n
        <b>o</b>   The android.widget.CheckBox class provides the facility of creating the CheckBoxes.\n
<b>o</b>   Methods of CheckBox class:\n
<b>o</b>   There are many inherited methods of View, TextView, and Button classes in the CheckBox class. Some of them are as follows:\n
<ul><li> public boolean isChecked(): Returns true if it is checked otherwise false.</li>\n
    <li>public void setChecked(boolean status): Changes the state of the CheckBox.</li>\n
</ul>\n\n
    </string>
    <string name="hello_blank_fragment4">
        <big><b>Android Radio Button</b></big>\n
        <ul><li>RadioButton is a two states button which is either checked or unchecked. If a single radio button is unchecked, we can click it to make checked radio button. Once a radio button is checked, it cannot be marked as unchecked by user.</li>\n
            <li>RadioButton is generally used with RadioGroup. RadioGroup contains several radio buttons, marking one radio button as checked makes all other radio buttons as unchecked.</li>\n
            <li>Example of Radio Button: Implement single radio button separately as well as radio button inÂ RadioGroup.</li>\n
       </ul> \n\n

        <big><b>Android Spinner</b></big>\n
        <ul><li>Android Spinner is like the combo box of AWT or Swing. It can be used to display the multiple options to the user in which only one item can be selected by the user.Android spinner is like the drop down menu with multiple values from which the end user can select only one value.</li>\n
            <li>Android spinner is associated with AdapterView. So you need to use one of the adapter classes with spinner.</li>\n
            <li>Android Spinner class is the subclass of AsbSpinner class.</li>\n
        </ul>\n\n

        <big><b>Android Spinner Inheritance</b></big>\n
    </string>
    <string name="hello_blank_fragment4half">\n\n
        <big><b>Android Spinner Example</b></big>\n
        <b>o</b>   In this example, we are going to display the country list. You need to use ArrayAdapter class to store the country list.\n
<b>o</b>   A user interface element that displays text to the user is know as TextView.\n
\n
  => java.lang.Object\n
         ↳ 	android.view.View\n
  	                 ↳ 	android.widget.TextView\n
        \n\n

        <big><b>Android AlertDialog</b></big>\n
        <ul><li>Android AlertDialog can be used to display the dialog message with OK and Cancel buttons. It can be used to interrupt and ask the user about his/her choice to continue or discontinue.</li>\n
            <li>Android AlertDialog is composed of three regions: title, content area and action buttons.</li>\n
            <li>Android AlertDialog is the subclass of Dialog class.</li>\n
        </ul>\n\n

        <big><b>AlertDialog Inheritance</b></big>\n
    </string>
    <string name="hello_blank_fragment4full">\n\n
        <big><b>Methods of AlertDialog Class</b></big>\n
        <ul><li>public AlertDialog.Builder setTitle(CharSequence)	:- This method is used to set the title of AlertDialog.</li>\n
            <li>public AlertDialog.Builder setMessage(CharSequence):-	This method is used to set the message for AlertDialog.</li>\n
            <li>public AlertDialog.Builder setIcon(int)	:- This method is used to set the icon over AlertDialog.</li>\n
</ul>\n\n
    </string>
    <string name="hello_blank_fragment7">
        <big><b>Android DatePicker</b></big>\n
        <b>o</b>   Android DatePicker is a widget to select date. It allows you to select date by day, month and year. Like DatePicker, android also provides TimePicker to select time.\n
<b>o</b>   The android.widget.DatePicker is the subclass of FrameLayout class.\n
\n\n
        <big><b>Date Picker Hierarchy</b></big>\n
    </string>
    <string name="hello_blank_fragment7half">
        \n\n
        <big><b>Android DatePicker Example</b></big>\n
        <b>o</b>   Android DatePicker is a widget to select date. It allows you to select date by day, month and year. Like DatePicker, android also provides TimePicker to select time.\n
<b>o</b>   The android.widget.DatePicker is the subclass of FrameLayout class.\n
\n\n
        <big><b>Android TimePicker</b></big>\n
        <b>o</b>   Android TimePicker widget is used to select date. It allows you to select time by hour and minute. You cannot select time by seconds.\n
<b>o</b>   The android.widget.TimePicker is the subclass of FrameLayout class.\n
\n\n
        <big><b>Time Picker Hierarchy</b></big>\n

    </string>
    <string name="hello_blank_fragment7full">\n\n
        <big><b>Android WebView</b></big>\n
        <ul><li>Android WebView is used to display web page in android. The web page can be loaded from same application or URL. It is used to display online content in android activity.</li>\n
            <li>Android WebView uses webkit engine to display web page.</li>\n
            <li>The android.webkit.WebView is the subclass of AbsoluteLayout class.</li>\n
            <li>The loadUrl() and loadData() methods of Android WebView class are used to load and display web page.</li>\n
        </ul>\n\n
        <big><b>WebView Hierarchy</b></big>\n

    </string>
    <string name="hello_blank_fragment7last">\n\n
        <big><b>Android WebView Example</b></big>\n
        Simple code to display PaperCrunch web page using Web View.
\n\n\n
    </string>
</resources>